Improve based on static analysis